--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,9 +26,11 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
+   assets:
+    - images/menu_icon.png
+    - images/1.5x/menu_icon.png
+    - images/2.0x/menu_icon.png
+    - images/3.0x/menu_icon.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
